--- a/web-app/package.json
+++ b/web-app/package.json
@@ -3,8 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "deck.gl": "^6.4.7",
     "react": "^16.8.5",
     "react-dom": "^16.8.5",
+    "react-map-gl": "^4.1.1",
     "react-scripts": "2.1.8"
   },
   "scripts": {
