--- a/web-app/package.json
+++ b/web-app/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@blueprintjs/core": "^3.14.1",
     "deck.gl": "^6.4.7",
     "react": "^16.8.5",
     "react-dom": "^16.8.5",
