--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "express": "^4.16.4",
     "moment": "^2.24.0",
-    "mongoose": "^5.4.22"
+    "mongoose": "^5.4.22",
+    "request": "^2.88.0"
   }
 }
