--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "private": true,
   "dependencies": {
     "@blueprintjs/core": "^3.14.1",
+    "@blueprintjs/datetime": "^3.9.0",
+    "@blueprintjs/docs-theme": "^3.1.0",
     "deck.gl": "^6.4.7",
+    "google-trends-api": "^4.9.0",
     "react": "^16.8.5",
     "react-dom": "^16.8.5",
     "react-map-gl": "^4.1.1",
