--- a/backend/package.json
+++ b/backend/package.json
@@ -9,9 +9,12 @@
   "author": "Bhalchandra",
   "license": "ISC",
   "dependencies": {
+    "async": "^2.6.2",
     "express": "^4.16.4",
     "moment": "^2.24.0",
     "mongoose": "^5.4.22",
-    "request": "^2.88.0"
+    "random": "^2.1.1",
+    "request": "^2.88.0",
+    "request-promise": "^4.2.4"
   }
 }
