--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "async": "^2.6.2",
+    "cors": "^2.8.5",
     "express": "^4.16.4",
     "moment": "^2.24.0",
     "mongoose": "^5.4.22",
