--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "dependencies": {
     "@blueprintjs/core": "^3.15.1",
     "@blueprintjs/datetime": "^3.9.0",
-    "@blueprintjs/docs-theme": "^3.1.0",
+    "@blueprintjs/docs-theme": "^3.2.0",
     "@blueprintjs/icons": "^3.8.0",
+    "@luma.gl/addons": "^7.0.0-alpha.16",
     "axios": "^0.18.0",
     "deck.gl": "^6.4.7",
     "google-trends-api": "^4.9.0",
@@ -16,7 +17,7 @@
     "react-compound-slider": "^1.2.1",
     "react-dom": "^16.8.6",
     "react-map-gl": "^4.1.1",
-    "react-scripts": "2.1.8"
+    "react-scripts": "^3.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
