taxi paths work on Scatter plot

--- a/package.json
+++ b/package.json
@@ -8,15 +8,15 @@
     "@blueprintjs/docs-theme": "^3.2.0",
     "@blueprintjs/icons": "^3.8.0",
     "@luma.gl/addons": "^7.0.0-alpha.16",
+    "deck.gl": "^7.0.0-beta",
     "axios": "^0.18.0",
-    "deck.gl": "^6.4.7",
     "google-trends-api": "^4.9.0",
     "moment": "^2.24.0",
     "rc-slider": "^8.6.9",
     "react": "^16.8.6",
     "react-compound-slider": "^1.2.1",
     "react-dom": "^16.8.6",
-    "react-map-gl": "^4.1.1",
+    "react-map-gl": "^4.1.2",
     "react-scripts": "^3.0.0",
     "recharts": "^1.5.0"
   },
