--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "@blueprintjs/docs-theme": "^3.2.0",
     "@blueprintjs/icons": "^3.8.0",
     "@luma.gl/addons": "^7.0.0-alpha.16",
-    "deck.gl": "^7.0.0-beta",
     "axios": "^0.18.0",
+    "deck.gl": "^7.0.0-beta",
     "google-trends-api": "^4.9.0",
     "moment": "^2.24.0",
     "rc-slider": "^8.6.9",
@@ -18,6 +18,7 @@
     "react-dom": "^16.8.6",
     "react-map-gl": "^4.1.2",
     "react-scripts": "^3.0.0",
+    "react-spinners": "^0.5.4",
     "recharts": "^1.5.0"
   },
   "scripts": {
